1999-04-30 Shigeru OKUMURA <sokumura@jaist.ac.jp>
	
	* mime-edit.el (mime-edit-use-long-mime-charset-comment):
	new variable for switch long comment mime-charset-comment

1999-04-29  Shigeru OKUMURA <sokumura@jaist.ac.jp>

	* mime-view.el (mime-dsiplay-application/x-postpet):
	more adding pet's data. i.e. health ,treasure and happiness
		
1999-04-08  Shigeru OKUMURA <sokumura@jaist.ac.jp>

	* mime-view.el (mime-displya-application/x-postpet):
	Adding pet's birth day and mail sent date
	
1999-04-07  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-view.el (mime-display-application/x-postpet): New function.
	(mime-preview-condition): Set up for
	'mime-preview-application/x-postpet.

1999-03-05  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-edit.el (mime-edit-normalize-body): Call `enriched-encode' with
	three arguments.

1999-02-18  Tanaka Akira  <akr@jaist.ac.jp>

	* Sync up with semi-1_13_2.

	* semi-def.el (mime-user-interface-product): Bump up to
	AKEMI 1.13.1.

1999-02-17  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-edit.el (mime-edit-define-charset): Check `mime-charset-comment'
	property for mime-charset to add comment.

1999-01-18  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-view.el (mime-display-text/x-vcard): Deal with bare LF as newline.

1999-01-17  Tanaka Akira  <akr@jaist.ac.jp>

	* mime-play.el, ChangeLog:
	* mime-play.el (mime-view-caesar): Use `enable-character-translation'
	instead of `standard-translation-table-for-decode' to disable
	character translation.

	* semi-def.el, ChangeLog, AKEMI-VERSION: * AKEMI-VERSION: New file.

	* semi-def.el (mime-user-interface-product): Bump up to
	AKEMI 1.12.1.

	* AKEMI-VERSION: New file.

	* mime-play.el, ChangeLog: * mime-play.el: Reuiqre `ccl'.
	(translate-string): New CCL program.
	(mime-view-caesar): Try to deal with
	`standard-translation-table-for-decode'.

	* mime-view.el, ChangeLog: Sync up with semi-vcard.

1999-01-17  Tanaka Akira  <akr@jaist.ac.jp>
